tests/invalid-type-member-name.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected a name for a member in the type.
// CHECK-NEXT:   2
// CHECK-NEXT:   ^

type T: {
  2
}
